Created listClients.html page where the stakeholder can view all the clients present in the database as a list.

--- a/public/ManageClients.html
+++ b/public/ManageClients.html
@@ -25,7 +25,9 @@
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addClient.html'">Add Client</button><br><br>
             <button class="editClient" onclick="location.href = 'editRemoveClient.html'">Edit/Remove Client</button><br><br>
+            <button class="listClients" onclick="location.href = 'listClients.html'">List Clients</button><br><br>
         </div>
     </div>
 </body>
+
 </html>
