--- a/public/addClient.html
+++ b/public/addClient.html
@@ -26,17 +26,17 @@
         <div class="clientInfoBox" id="informationContainer">
             <form method="post" action="/saveClient">
                 <label class="FirstName" for="First Name">First Name: </label>
-                <input type="text" class="firstName" name="firstName"><br><br>
+                <input type="text" class="firstName" name="firstName" required><br><br>
                 <label class="LastName" for="Last Name">Last Name:</label>
-                <input type="text" class="lastName" name="lastName"><br><br>
+                <input type="text" class="lastName" name="lastName" required><br><br>
                 <label class="EMAIL" for="Email">Email:</label>
-                <input type="text" class="email" name="email"><br><br>
+                <input type="text" class="email" name="email" required><br><br>
                 <label class="PhoneNumber" for="Phone Number">Phone Number:</label>
-                <input type="text" class="phoneNumber" name="phoneNumber"><br><br>
+                <input type="text" class="phoneNumber" name="phoneNumber" required><br><br>
                 <label class="UserName" for="Username">Username: </label>
-                <input type="text" class="username" name="username"><br><br>
+                <input type="text" class="username" name="username" required><br><br>
                 <label class="PassWord" for="Password">Password: </label>
-                <input type="text" class="password" name="password"><br><br>
+                <input type="text" class="password" name="password" required><br><br>
                 <button type="submit" class="saveInfo">Add Client</button>
             </form>
         </div>
