--- a/public/editRemoveClient.html
+++ b/public/editRemoveClient.html
@@ -1,79 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="editRemoveClient.css" />
-    <title>Edit Client</title>
-  </head>
 
-  <body>
-    <div class="menu-bar">
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Owner-Booking.html">Appointments</a></li>
-          <li><a href="ManageClients.html">Manage Clients</a></li>
-          <li><a href="manageAnimals.html">Manage Animals</a></li>
-          <li><a href="#">Forms</a></li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="editRemoveClient.css" />
+  <title>Edit Client</title>
+</head>
+
+<body>
+  <div class="menu-bar">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Owner-Booking.html">Appointments</a></li>
+        <li><a href="ManageClients.html">Manage Clients</a></li>
+        <li><a href="manageAnimals.html">Manage Animals</a></li>
+        <li><a href="#">Forms</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="clientLookUp">
+    <h1>Client Search</h1>
+    <div class="clientInfo" id="clientInfoBox2">
+      <form method="get" action="/clientInfo">
+        <label class="FirstName1" for="firstName1">First Name:</label>
+        <input required ="text" id="firstname1" class="firstName1" name="firstName1"><br><br>
+        <label class="LastName1" for="lastName1">Last Name:</label>
+        <input required type="text" id="lastname1" class="lastName1" name="lastName1"><br><br>
+        <button type="button" onclick="searchClient()" class="searchInfo">
+          Search
+        </button>
+      </form>
     </div>
+  </div>
 
-    <div class="clientLookUp">
-      <h1>Client Search</h1>
-      <div class="clientInfo" id="clientInfoBox2">
-        <form method="get" action="/clientInfo">
-          <label class="FirstName1" for="firstName1">First Name:</label>
-          <input
-            type="text"
-            id="firstname1"
-            class="firstName1"
-            name="firstName1"
-            required
-          /><br /><br />
-          <label class="LastName1" for="lastName1">Last Name:</label>
-          <input
-            type="text"
-            id="lastname1"
-            class="lastName1"
-            name="lastName1"
-            required
-          /><br /><br />
-          <button type="button" onclick="searchClient()" class="searchInfo">
-            Search
-          </button>
-        </form>
-      </div>
-    </div>
+  <div class="clientResultShow">
+    <h1>Client Information</h1>
+    <div class="clientInfo1" id="clientInfo2"></div>
+  </div>
+</body>
 
-    <div class="clientResultShow">
-      <h1>Client Information</h1>
-      <div class="clientInfo1" id="clientInfo2"></div>
-    </div>
-  </body>
-  
-  <script>
-    async function searchClient() {
-      const firstName = document.getElementById("firstname1").value;
-      const lastName = document.getElementById("lastname1").value;
+<script>
+  async function searchClient() {
+    const firstName = document.getElementById("firstname1").value;
+    const lastName = document.getElementById("lastname1").value;
 
-      try {
-        const response = await fetch(
-          `/clientInfo?firstName1=${firstName}&lastName1=${lastName}`,
-          {
-            method: "GET",
-          }
-        );
+    try {
+      const response = await fetch(
+        `/clientInfo?firstName1=${firstName}&lastName1=${lastName}`,
+        {
+          method: "GET",
+        }
+      );
 
-        if (response.ok) {
-          const data = await response.json();
-          if (data.length === 0) {
-            document.getElementById("clientInfo2").innerHTML =
-              "No Results Found";
-          } else {
-            data.forEach((client) => {
-              document.getElementById("clientInfo2").innerHTML = `
+      if (response.ok) {
+        const data = await response.json();
+        if (data.length === 0) {
+          document.getElementById("clientInfo2").innerHTML =
+            "No Results Found";
+        } else {
+          data.forEach((client) => {
+            document.getElementById("clientInfo2").innerHTML = `
                         <p>Name: ${client.firstName} ${client.lastName}</p>
                         <p>Email: ${client.email}</p>
                         <p>Phone Number: ${client.phoneNumber}</p>
@@ -82,64 +71,40 @@
                         <button class="editInfo" onclick="">Edit Client</button>
                         <button class="removeInfo" onclick="removeClient('${client.username}')">Remove Client</button>
                     `;
-            });
-          }
-        } else {
-          document.getElementById("clientInfo2").innerHTML = "No Results Found";
-          console.log("Failed to fetch client information");
+          });
         }
-      } catch (error) {
-        console.error(error);
+      } else {
+        document.getElementById("clientInfo2").innerHTML = "No Results Found";
+        console.log("Failed to fetch client information");
       }
-
-      document.getElementById("firstname1").value = "";
-      document.getElementById("lastname1").value = "";
+    } catch (error) {
+      console.error(error);
     }
 
-    async function removeClient(username) {
-<<<<<<< HEAD
-        try {
-            const response = await fetch('/removeClient', {
-                method: 'DELETE',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username }),
-            });
+    document.getElementById("firstname1").value = "";
+    document.getElementById("lastname1").value = "";
+  }
 
-            if (response.ok) {
-                // Handle a successful deletion, e.g., remove the client from the UI.
-                document.getElementById("clientInfo2").innerHTML = "Client Removed";
-            } else {
-                console.log('Failed to delete the client');
-            }
-        } catch (error) {
-            console.error(error);
-        }
+  async function removeClient(username) {
+    try {
+      const response = await fetch('/removeClient', {
+        method: 'DELETE',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ username }),
+      });
+
+      if (response.ok) {
+        // Handle a successful deletion, e.g., remove the client from the UI.
+        document.getElementById("clientInfo2").innerHTML = "Client Removed";
+      } else {
+        console.log('Failed to delete the client');
+      }
+    } catch (error) {
+      console.error(error);
     }
+  }
 </script>
 
 </html>
-=======
-      try {
-        const response = await fetch("/removeClient", {
-          method: "DELETE",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ username }),
-        });
-
-        if (response.ok) {
-          // Handle a successful deletion, e.g., remove the client from the UI.
-          document.getElementById("clientInfo2").innerHTML = "Client Removed";
-        } else {
-          console.log("Failed to delete the client");
-        }
-      } catch (error) {
-        console.error(error);
-      }
-    }
-  </script>
-</html>
->>>>>>> 56fa39f077d04d46bae15e9410b28441a45cd88f
