--- a/public/manageAnimals.html
+++ b/public/manageAnimals.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="manageAnimals.css">
-    <Title>Clients</Title>
+    <Title>Animals</Title>
 </head>
 
 <body>
