Created listAnimals.html file in which the stakeholder can view all the animals present in the database as a list.

--- a/public/listClients.html
+++ b/public/listClients.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Owner-Booking.html">Appointments</a></li>
                 <li><a href="manageAnimals.html">Manage Animals</a></li>
+                <li><a href="ManageClients.html">Manage Clients</a></li>
                 <li><a href="#">Forms</a></li>
             </ul>
         </nav>
