--- a/public/manageAnimals.html
+++ b/public/manageAnimals.html
@@ -25,6 +25,7 @@
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addAnimal.html'">Add Animal</button><br><br>
             <button class="editClient" onclick="location.href = 'editRemoveAnimal.html'">Edit/Remove Animal</button><br><br>
+            <button class="listAnimals" onclick="location.href = 'listAnimals.html'">List Animals</button><br><br>
         </div>
     </div>
 </body>
