--- a/public/listAnimals.html
+++ b/public/listAnimals.html
@@ -22,7 +22,9 @@
     </div>
     <div class="buttonClickBox">
         <h1>Animal Lists</h1>
-        <button class="showAnimals" onclick="displayInfo()">Display Animals</button>
+        <button class="showAnimals" onclick="displayInfo()">Display Animals</button><br><br>
+        <button class="addAnimal" onclick="location.href = 'addAnimal.html'">Add Animal</button><br><br>
+        <button class="editRemoveAnimal" onclick="location.href = 'editRemoveAnimal.html'">Edit/Remove Animal</button><br><br>
     </div>
     <div id="animalList" class="animalLists">
         <div class="results" id="result"></div>
