--- a/public/manageAnimals.html
+++ b/public/manageAnimals.html
@@ -24,7 +24,7 @@
         <h1>Animal Management</h1>
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addAnimal.html'">Add Animal</button><br><br>
-            <button class="editClient" onclick="location.href = 'editRemoveAnimal.html'">Edit/Remove Animal</button><br><br>
+            <button class="editRemoveClient" onclick="location.href = 'editRemoveAnimal.html'">Edit/Remove Animal</button><br><br>
             <button class="listAnimals" onclick="location.href = 'listAnimals.html'">List Animals</button><br><br>
         </div>
     </div>
