--- a/public/ManageClients.html
+++ b/public/ManageClients.html
@@ -24,7 +24,7 @@
         <h1>Client Management</h1>
         <div class="boxContainer" id="containerBox">
             <button class="addClient" onclick="location.href = 'addClient.html'">Add Client</button><br><br>
-            <button class="editClient" onclick="location.href = 'editRemoveClient.html'">Edit/Remove Client</button><br><br>
+            <button class="editRemoveClient" onclick="location.href = 'editRemoveClient.html'">Edit/Remove Client</button><br><br>
             <button class="listClients" onclick="location.href = 'listClients.html'">List Clients</button><br><br>
         </div>
     </div>
