--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
 <div id="myDropdown" class="nav">
         
             <a href="index.html">Home </a> 
-            <a href="AppointmentBooking.html">Appointment Booking  </a>
-            <a href="Feedback.html"> Feedback</a>
+            <a href="appointmentBooking.html">Request Appointment</a>
             <a href="sign-in.html">Sign In  </a>
             <a href="#">About us  </a>
             <a href="#Contact">Contact</a>
