--- a/public/userMenu.html
+++ b/public/userMenu.html
@@ -14,6 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="appointmentBooking.html">Create Appointment</a></li> 
                     <!--
                     in view animals, you can select an animal which will bring you to
                     a new page with the animals info and there feedback forms samantha provides
