--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#">About us</a>
             <a href="sign-in.html">Sign In</a>
             <a href="#">Appointment-Booking</a>
-             <a href="#"> Post-care-feedback</a>
+             <a href="public/Feedback.html"> Post-care-feedback</a>
         </div>
     </div>
     
