--- a/public/listAnimals.html
+++ b/public/listAnimals.html
@@ -42,7 +42,7 @@
                     const animalInfo = document.createElement("animalInfo");
                     animalInfo.innerHTML = `<p>Name: ${animal.Name}</p>
                         <p>ID: ${animal.ID}</p>
-                        <p>Owner: ${animal.Owner}</p>
+                        <p>Owner Username: ${animal.OwnerUser}</p>
                         <p>Species: ${animal.Species}</p>
                         <p>Breed: ${animal.Breed}</p>
                         <p>-------------------------------</p>
