--- a/public/addAnimal.html
+++ b/public/addAnimal.html
@@ -29,7 +29,7 @@
                 <input type="text" class="animalName" name="animalName" required><br><br>
                 <label class="AnimalID" for="animalID">Animal ID:</label>
                 <input type="text" class="animalID" name="animalID" required><br><br>
-                <label class="Owner" for="owner">Owner:</label>
+                <label class="Owner" for="owner">Owner Username:</label>
                 <input type="text" class="ownerr" name="owner" required><br><br>
                 <label class="species" for="selectSpecies">  Select Species:  </label><br>
             <select id="species" name="species" required>
