adjusted look of listAnimal/Client, and manageAnimal/Client to make it more uniform.

--- a/public/manageAnimals.html
+++ b/public/manageAnimals.html
@@ -20,11 +20,11 @@
         </nav>
     </div>
 
-    <div class="clientContainer">
+    <div class="animalContainer">
         <h1>Animal Management</h1>
         <div class="boxContainer" id="containerBox">
-            <button class="addClient" onclick="location.href = 'addAnimal.html'">Add Animal</button><br><br>
-            <button class="editRemoveClient" onclick="location.href = 'editRemoveAnimal.html'">Edit/Remove Animal</button><br><br>
+            <button class="addAnimal" onclick="location.href = 'addAnimal.html'">Add Animal</button><br><br>
+            <button class="editRemoveAnimal" onclick="location.href = 'editRemoveAnimal.html'">Edit/Remove Animal</button><br><br>
             <button class="listAnimals" onclick="location.href = 'listAnimals.html'">List Animals</button><br><br>
         </div>
     </div>
