--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <a href="index.html">Home </a> 
             <a href="appointmentBooking.html">Request Appointment</a>
             <a href="sign-in.html">Sign In  </a>
-            <a href="#">About us  </a>
+            <a href="Feedback.html">Post-care feedback </a>
             <a href="#Contact">Contact</a>
         </div>
         <div class="phone">
