--- a/public/Feedback.html
+++ b/public/Feedback.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback - Samantha's Canine Massage</title>
     <link rel="stylesheet" href="Index.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 
 <body class="Fbody">
@@ -13,18 +14,68 @@
         <h1>Feedback and Reviews</h1>
 
         <div class="feedback-form">
-        <input type="text" id="username" placeholder="Your Name" required>
-        <textarea class="Ftextarea" id="feedback" placeholder="Write your feedback here..." required></textarea>
-        <input type="file" id="video" accept="video/*">
-        <button class ="Fbutton" id="submitBtn">Submit</button>
+            <form id="feedbackForm" enctype="multipart/form-data">
+                <input type="text" id="username" placeholder="Your Name" required>
+                <textarea class="Ftextarea" id="feedback" placeholder="Write your feedback here..." required></textarea>
+                <input type="file" id="video" name="video" accept="video/mp4">
+                <button class="Fbutton" id="submitBtn" type="button">Submit</button>
+            </form>
+        </div>
+
+        <div class="feedback-list" id="feedbackList"></div>
     </div>
 
-    <div class="feedback-list" id="feedbackList">
-      
-    </div>
-</div>
+    <script>
+        $(document).ready(function () {
+            $('#submitBtn').on('click', function () {
+                const username = $('#username').val();
+                const feedback = $('#feedback').val();
+                
+                // FormData to handle file uploads
+                const formData = new FormData();
+                formData.append('username', username);
+                formData.append('feedback', feedback);
+                formData.append('video', $('#video')[0].files[0]); // Get the selected file
 
-    <script src="script.js"></script>
+                // Send the data to the server using AJAX
+                $.ajax({
+                    url: '/api/feedback',
+                    type: 'POST',
+                    data: formData,
+                    processData: false,  // Prevent jQuery from processing data
+                    contentType: false,  // Prevent jQuery from setting content type
+                    success: function (data) {
+                        alert(data.message);
+                        // Optionally, you can clear the form here
+                        // Refresh the feedback list
+                        fetchFeedbackList();
+                    },
+                    error: function (error) {
+                        console.error(error);
+                        alert('Error submitting feedback');
+                    }
+                });
+            });
+
+            // Function to fetch and display feedback list
+            function fetchFeedbackList() {
+                $.get('/api/feedbacks', function (feedbacks) {
+                    // Assuming you have a div with id 'feedbackList' to display the feedback
+                    const feedbackList = $('#feedbackList');
+                    feedbackList.empty(); // Clear previous feedback entries
+
+                    // Append new feedback entries
+                    feedbacks.forEach(function (feedback) {
+                        const feedbackItem = `<div><strong>${feedback.username}</strong>: ${feedback.feedback}</div>`;
+                        feedbackList.append(feedbackItem);
+                    });
+                });
+            }
+
+            // Fetch and display feedback list on page load
+            fetchFeedbackList();
+        });
+    </script>
 </body>
 
 </html>
